# conrobo

./: .cmake-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README-zh.md  README.md  config.cmake
application/: CMakeLists.txt
application/experiment/: CMakeLists.txt
application/verification/: CMakeLists.txt  _example.cpp  veri_usbcam.cpp  veri_video.cpp
benchs/: CMakeLists.txt  main.cpp
benchs/shared/: string_util_benchmark.cpp
cmake/: cpack.cmake  utils.cmake  version.h.in
data/test/shared/: generate_test_case.py  string_util_case.txt
docs/: CMakeLists.txt
include/: base.h
include/math/: matrix.h
include/math/details/: matrix-eigen.h
include/sensor/video/: all.hpp  cam.hpp  capture.hpp  video.hpp
include/sensor/video/handler/: usbcam-impl.hpp  video-impl.hpp
include/shared/: filesystem.h  string_util.h  string_util.hpp
resources/: README.md
samples/: CMakeLists.txt
samples/shared/: string_util_sample.cpp
scripts/: format.sh  format_check.sh
src/shared/: hello.cpp  string_util.cpp
tests/: CMakeLists.txt  main.cpp  utils.hpp
tests/shared/: string_util_test.cpp
